feat: added structure of navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNO</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>DNO</h1>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="pages/products.html">Productos</a></li>
+            <li><a href="pages/services.html">Servicios</a></li>
+            <li><a href="pages/about.html">Nosotros</a></li>
+            <li><a href="pages/contact.html">Contactanos</a></li>
+        </nav>
+    </header>
 </body>
 </html>
