--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <h1>DNO</h1>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/products.html">Productos</a></li>
-            <li><a href="pages/services.html">Servicios</a></li>
-            <li><a href="pages/about.html">Nosotros</a></li>
-            <li><a href="pages/contact.html">Contactanos</a></li>
+            <ul>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="pages/products.html">PRODUCTOS</a></li>
+                <li><a href="pages/services.html">SERVICIOS</a></li>
+                <li><a href="pages/about.html">SERVICIOS</a></li>
+                <li><a href="pages/contact.html">CONTACTANOS</a></li>
+            </ul>
         </nav>
     </header>
 </body>
