feat: added navbar to other pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -15,10 +15,10 @@
             <h1>DNO</h1>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="pages/products.html">PRODUCTOS</a></li>
-                <li><a href="pages/services.html">SERVICIOS</a></li>
-                <li><a href="pages/about.html">SERVICIOS</a></li>
-                <li><a href="pages/contact.html">CONTACTANOS</a></li>
+                <li><a href="../pages/products.html">PRODUCTOS</a></li>
+                <li><a href="../pages/services.html">SERVICIOS</a></li>
+                <li><a href="../pages/about.html">NOSOTROS</a></li>
+                <li><a href="../pages/contact.html">CONTACTANOS</a></li>
             </ul>
         </nav>
     </header>
