--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
