feat: added base structure

--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
             <a href="https://drive.google.com/file/d/1GtiO5bD6HZTLbtD6VtRxjjHLvgZVkA9e/view" target="_blank">Ver carta</a>
         </section>
     </main>
+    <footer>
+        <div>
+            <a href=""><img src="" alt=""></i></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+        </div>
+    </footer>
 </body>
 </html>
