feat: added style to footer.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="../css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header>
@@ -29,10 +30,14 @@
         </section>
     </main>
     <footer>
+        <img src="/img/logo.jpeg" alt="">
         <div>
-            <a href=""><img src="" alt=""></i></a>
-            <a href=""><img src="" alt=""></a>
-            <a href=""><img src="" alt=""></a>
+            <p>Encuentranos en: Av Manuel Villaran 1017, Surquillo</p>
+        </div>
+        <div>
+            <a href="https://www.instagram.com/dno.pe/?hl=es-la" target="_blank"><i class='bx bxl-instagram' style='color:#ffffff'></i></a>
+            <a href="https://www.facebook.com/DNNO.PE/" target="_blank"><i class='bx bxl-facebook-square' style='color:#ffffff'></i></a>
+            <a href="https://api.whatsapp.com/send?phone=51952070937" target="_blank"><i class='bx bxl-whatsapp' style='color:#ffffff'></i></a>
         </div>
     </footer>
 </body>
