--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem illo omnis impedit, tenetur repellendus error, sint eveniet accusamus alias, voluptatibus cumque at quo fugiat dignissimos. Unde eveniet blanditiis quo deleniti?</p>
             <a href="https://drive.google.com/file/d/1GtiO5bD6HZTLbtD6VtRxjjHLvgZVkA9e/view" target="_blank">Ver carta</a>
         </section>
+        <section class="products">
+
+        </section>
     </main>
     <footer>
         <img src="/img/logo.jpeg" alt="">
