--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
             <a href="https://drive.google.com/file/d/1GtiO5bD6HZTLbtD6VtRxjjHLvgZVkA9e/view" target="_blank">Ver carta</a>
         </section>
         <section class="products">
-
+            <h2>Productos</h2>
+            <div>
+                <img src="" alt="">
+                <h3>Producto 1</h3>
+                <a href="">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Producto 2</h3>
+                <a href="">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Producto 3</h3>
+                <a href="">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Producto 4</h3>
+                <a href="">Comprar</a>
+            </div>
         </section>
     </main>
     <footer>
