feat: added content to section.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,57 @@
                 <a href="">Comprar</a>
             </div>
         </section>
+        <section class="instagram">
+            <h2>Siguenos en instagram <a href="https://www.instagram.com/dno.pe/" target="_blank">@dno.pe</a></h2>
+            <div>
+                <p>Imagen 1</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 2</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 3</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 4</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 5</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 6</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 7</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 8</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 9</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 10</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 11</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+            <div>
+                <p>Imagen 12</p>
+                <a href="#"><img src="" alt=""></a>
+            </div>
+        </section>
     </main>
     <footer>
         <img src="/img/logo.jpeg" alt="">
