feat: boiler plate contact us.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -21,6 +20,19 @@
             </ul>
         </nav>
     </header>
-    <p>Contactanos funciona</p>
+    <main>
+
+    </main>
+    <footer>
+        <img src="/img/logo.jpeg" alt="">
+        <div>
+            <p>Encuentranos en: Av Manuel Villaran 1017, Surquillo</p>
+        </div>
+        <div>
+            <a href="https://www.instagram.com/dno.pe/?hl=es-la" target="_blank"><i class='bx bxl-instagram' style='color:#ffffff'></i></a>
+            <a href="https://www.facebook.com/DNNO.PE/" target="_blank"><i class='bx bxl-facebook-square' style='color:#ffffff'></i></a>
+            <a href="https://api.whatsapp.com/send?phone=51952070937" target="_blank"><i class='bx bxl-whatsapp' style='color:#ffffff'></i></a>
+        </div>
+    </footer>
 </body>
 </html>
