feat: added products page style and content.

--- a/pages/products.html
+++ b/pages/products.html
@@ -6,6 +6,7 @@
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header>
@@ -20,8 +21,56 @@
             </ul>
         </nav>
     </header>
-    <main>
-        
+    <main class="products-page">
+        <h2>Conoce nuestros productos</h2>
+        <div>
+            <img src="" alt="">
+            <p>Producto 1</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 2</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 3</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 4</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 5</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 6</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 7</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 8</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 9</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 10</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 11</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>Producto 12</p>
+        </div>
     </main>
     <footer>
         <img src="/img/logo.jpeg" alt="">
