--- a/pages/services.html
+++ b/pages/services.html
@@ -6,19 +6,36 @@
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h1>DNO</h1>
-            <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="../pages/products.html">PRODUCTOS</a></li>
-                <li><a href="#">SERVICIOS</a></li>
-                <li><a href="../pages/about.html">NOSOTROS</a></li>
-                <li><a href="../pages/contact.html">CONTACTANOS</a></li>
-            </ul>
+        <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-black">
+            <a href="../index.html" class="navbar-brand mb-0 h1"><img src="../img/logo.jpeg" alt="Logo" height="80" width="80"></a>
+            <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="../index.html" class="nav-link ">Inicio</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="products.html" class="nav-link">productos</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="services.html" class="nav-link active">servicios</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="about.html" class="nav-link">nosotros</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="contact.html" class="nav-link">contactanos</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <p>Servicios funciona</p>
