changed image width from instagram section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <section class="hero">
             <h2>Desde 2020</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem illo omnis impedit, tenetur repellendus error, sint eveniet accusamus alias, voluptatibus cumque at quo fugiat dignissimos. Unde eveniet blanditiis quo deleniti?</p>
+            <p>Sabores que despiertan emociones, texturas que cuentan historias. Bienvenido a DNO, donde cada hamburguesa es una obra maestra en tu plato.</p>
             <a href="https://drive.google.com/file/d/1GtiO5bD6HZTLbtD6VtRxjjHLvgZVkA9e/view" target="_blank">Ver carta</a>
         </section>
         <section class="instagram">
@@ -55,15 +55,15 @@
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/bbq-double.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/bbq-wings.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/cheese-single.jpg" alt="">
                   </div>
                 </div>
             </div>
@@ -71,19 +71,19 @@
                 <div class="row gx-1 justify-content-center">
               
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/choripan.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/clasica-double.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/clasica-single.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/diablo-wings.jpg" alt="">
                   </div>
                 </div>
             </div>
@@ -91,19 +91,19 @@
                 <div class="row gx-1 justify-content-center">
               
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/hawaina-single.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/mustard-wings.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/onion-rings.jpg" alt="">
                   </div>
 
                   <div class="col-lg-3 col-md-6">
-                    <img loading="lazy" src="img/bacon-double.jpg" alt="">
+                    <img loading="lazy" src="img/parrillera-single.jpg" alt="">
                   </div>
                 </div>
             </div>
