--- a/pages/products.html
+++ b/pages/products.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="preload" href="../css/estilos.css" as="style">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -38,56 +39,75 @@
             </div>
         </nav>
     </header>
-    <main class="products-page">
-        <h2>Conoce nuestros productos</h2>
-        <div>
-            <img src="" alt="">
-            <p>Producto 1</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 2</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 3</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 4</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 5</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 6</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 7</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 8</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 9</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 10</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 11</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>Producto 12</p>
-        </div>
+    <main id="carta">
+        <section class="carta-info">
+            <h1>Conoce nuestros productos</h1>
+        </section>
+        <h2>Hamburgesas</h2>
+        <section class="foods">
+            <article class="foods__img">
+                <img loading="lazy" src="../img/bacon-double.jpg" alt="Hamburguesa bacon doble">
+                <div class="foods__info">
+                    <p>Hamburguesa bacon doble</p>
+                    <p class="price">S/. 20</p>
+                </div>
+            </article>
+            <article class="foods__img">
+                <img loading="lazy" src="../img/bbq-double.jpg" alt="Hamburguesa BBQ doble">
+                <div class="foods__info">
+                    <p>Hamburguesa BBQ doble</p>
+                    <p class="price">S/. 23</p>
+                </div>
+            </article>
+            <article class="foods__img">
+                <img loading="lazy" src="../img/cheese-single.jpg" alt="Hamburguesa cheese single">
+                <div class="foods__info">
+                    <p>Hamburguesa Cheese single</p>
+                    <p class="price">S/. 18</p>
+                </div>
+            </article>
+            <article class="foods__img">
+                <img loading="lazy" src="../img/clasica-double.jpg" alt="Hamburguesa clasica doble">
+                <div class="foods__info">
+                    <p>Hamburguesa clasica doble</p>
+                    <p class="price">S/. 16</p>
+                </div>
+            </article>
+        </section>
+        <h2>Wings</h2>
+        <section class="foods">
+            <article class="foods__img">
+                <img loading="lazy" src="../img/bbq-wings.jpg" alt="Alitas BBQ">
+                <div class="foods__info">
+                    <p>Alitas BBQ</p>
+                    <p class="price">S/. 16</p>
+                </div>
+            </article>
+            <article class="foods__img">
+                <img loading="lazy" src="../img/diablo-wings.jpg" alt="Alitas diablo">
+                <div class="foods__info">
+                    <p>Alitas diablo</p>
+                    <p class="price">S/. 18</p>
+                </div>
+            </article>
+            <article class="foods__img">
+                <img loading="lazy" src="../img/mustard-wings.jpg" alt="Alitas mustard">
+                <div class="foods__info">
+                    <p>Alitas mustard</p>
+                    <p class="price">S/. 18</p>
+                </div>
+            </article>
+        </section>
+        <h2>Complementos</h2>
+        <section class="foods">
+            <article class="foods__img">
+                <img loading="lazy" src="../img/onion-rings.jpg" alt="Onion rings">
+                <div class="foods__info">
+                    <p>Onion rings</p>
+                    <p class="price">S/. 13</p>
+                </div>
+            </article>
+        </section>
     </main>
     <footer>
         <img src="/img/logo.jpeg" alt="">
