--- a/pages/about.html
+++ b/pages/about.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="preload" href="../css/estilos.css" as="style">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
