--- a/pages/services.html
+++ b/pages/services.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DNO</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <style>@import url('https://fonts.cdnfonts.com/css/nue-gothic');</style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilos.css">
-</head>
+    <link rel="preload" href="../css/estilos.css" as="style">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-black">
@@ -38,6 +39,40 @@
             </div>
         </nav>
     </header>
-    <p>Servicios funciona</p>
+    <main id="delivery">
+        <section class="soon">
+            <div class="title-container">
+                <h1>Próxima<span>mente</span> en DNO...</h1>
+            </div>
+            <img src="../img/deliv.png" alt="Rappi y PedidosYa">
+        </section>
+        <section class="now">
+            <div class="title-container">
+                <p>Mientras tanto... <span>¡Puedes mandarnos un WhatsApp o llamar al local!</span></p>
+            </div>
+            <div class="now__phones">
+                <a href="#" target="_blank"><img src="../img/whatsapp.png" alt="Pide por WhatsApp"> ¡Haz tu pedido!</a>
+                <p><img src="../img/telephone.png" alt="Llamanos al número de línea">876-5432</p>
+            </div>
+        </section>
+        <section class="business-hours">
+            <div class="business-hours__title">
+                <img src="../img/clock.png" alt="Horarios">
+                <h2>Horarios de atención</h2>
+            </div>
+            <p>De Martes a Domingo - Desde 13hs hasta las 22hs.</p>
+        </section>
+    </main>
+    <footer>
+        <img src="/img/logo.jpeg" alt="">
+        <div>
+            <p>Encuentranos en: Av Manuel Villaran 1017, Surquillo</p>
+        </div>
+        <div>
+            <a href="https://www.instagram.com/dno.pe/?hl=es-la" target="_blank"><i class='bx bxl-instagram' style='color:#ffffff'></i></a>
+            <a href="https://www.facebook.com/DNNO.PE/" target="_blank"><i class='bx bxl-facebook-square' style='color:#ffffff'></i></a>
+            <a href="https://api.whatsapp.com/send?phone=51952070937" target="_blank"><i class='bx bxl-whatsapp' style='color:#ffffff'></i></a>
+        </div>
+    </footer>
 </body>
 </html>
